# BLOKI

./: README.md  README_DAY_02_FRONT.md  README_FINAL.md
BACK/: .dockerignore  .env.example  .gitignore  .test-auth-data.json  .test-complete-flow-results.json  .test-property-data.json  API_EXAMPLES.md  BACKEND_IMPLEMENTATION_REPORT.md  CLOUDFLARE_SETUP.md  COMPLETION_SUMMARY.md  DATABASE_SEED.sql  DEPLOYER_UPDATE.md  Dockerfile  ENDPOINTS_REPORT.md  EVALUATORS-README.md  GUIA_FLUJO_WEB.md  IMPLEMENTATION_REPORT.txt  (+36 more)
BACK/stellar-blocki/: AUDIT_COMPLETION_SUMMARY.md  Cargo.toml  EVENTS_DOCUMENTATION.md  README.md  SECURITY_AUDIT_REPORT.md
BACK/stellar-blocki/circuits/: .gitignore  ZK_CIRCUITS_DOCUMENTATION.md  accredited_investor.circom  build.sh  kyc_verification.circom  ownership_proof.circom  package-lock.json  package.json
BACK/stellar-blocki/contracts/: CHANGES_REPORT.md
BACK/stellar-blocki/contracts/core/escrow/: Cargo.toml
BACK/stellar-blocki/contracts/core/escrow/src/: lib.rs  yield_integration.rs
BACK/stellar-blocki/contracts/core/marketplace/: Cargo.toml
BACK/stellar-blocki/contracts/core/marketplace/src/: lib.rs  swap.rs
BACK/stellar-blocki/contracts/core/oracle-consumer/: Cargo.toml
BACK/stellar-blocki/contracts/core/oracle-consumer/src/: lib.rs
BACK/stellar-blocki/contracts/core/property-token/: Cargo.toml
BACK/stellar-blocki/contracts/core/property-token/src/: lib.rs
BACK/stellar-blocki/contracts/core/property-token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_initialize.1.json  test_ownership_percentage.1.json  test_transfer.1.json  test_transfer_insufficient_balance.1.json
BACK/stellar-blocki/contracts/core/registry/: Cargo.toml
BACK/stellar-blocki/contracts/core/registry/src/: lib.rs
BACK/stellar-blocki/contracts/core/usdc-mock/: Cargo.toml
BACK/stellar-blocki/contracts/core/usdc-mock/src/: lib.rs
BACK/stellar-blocki/contracts/core/zk-verifier/: Cargo.toml
BACK/stellar-blocki/contracts/core/zk-verifier/src/: lib.rs
BACK/stellar-blocki/contracts/utils/deployer/: Cargo.toml
BACK/stellar-blocki/contracts/utils/deployer/src/: lib.rs
BACK/stellar-blocki/contracts/utils/errors/: Cargo.toml
BACK/stellar-blocki/contracts/utils/errors/src/: lib.rs
BACK/stellar-blocki/contracts/utils/events/: Cargo.toml
BACK/stellar-blocki/contracts/utils/events/src/: lib.rs
BACK/stellar-blocki/contracts/utils/storage/: Cargo.toml
BACK/stellar-blocki/contracts/utils/storage/src/: lib.rs
BACK/stellar-blocki/fuzz/: Cargo.toml  README.md  run_all_fuzz_tests.sh
BACK/stellar-blocki/fuzz-setup/: FUZZING_SETUP_GUIDE.md
BACK/stellar-blocki/fuzz/fuzz_targets/: fuzz_escrow_lock.rs  fuzz_marketplace_buy.rs  fuzz_property_transfer.rs  fuzz_registry_register.rs
(+284 files in other folders)
